testing of improved scraped for sonar